--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,139 @@
-numpy==1.21.2
-pandas==1.3.3
+apache-beam==2.44.0
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+async-generator==1.10
+attrs==21.4.0
+beautifulsoup4==4.10.0
 beautifultable==1.1.0
+bleach==4.1.0
+bs4==0.0.1
+certifi==2021.5.30
+cffi==1.15.0
+charset-normalizer==2.0.4
+click==8.0.4
+cloudpickle==2.2.1
+crcmod==1.7
+cryptography==36.0.2
+cssselect==1.1.0
+cycler==0.10.0
+debugpy==1.5.1
+defusedxml==0.7.1
+dill==0.3.1.1
+Django==1.9.1
+docopt==0.6.2
+entrypoints==0.4
+exchange-calendars==3.5
+fake-useragent==0.1.11
+fastavro==1.7.0
+fasteners==0.18
+Fedtools==0.0.7
+feedparser==6.0.8
+Flask==2.0.3
+grpcio==1.51.1
+h11==0.13.0
+hdfs==2.7.0
+httplib2==0.20.4
+idna==3.2
+importlib-metadata==4.10.0
+importlib-resources==5.4.0
+iniconfig==1.1.1
+ipykernel==6.9.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+itsdangerous==2.1.1
+Jinja2==3.0.3
+jsonschema==4.4.0
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.4.0
+jupyter-core==4.9.2
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+kiwisolver==1.3.2
+korean-lunar-calendar==0.2.1
+lxml==4.6.3
+MarkupSafe==2.1.0
+matplotlib==3.4.3
+mistune==0.8.4
+mock==4.0.3
+mpmath==1.2.1
+multitasking==0.0.9
+nbclient==0.5.11
+nbconvert==6.4.2
+nbformat==5.1.3
+nest-asyncio==1.5.4
+nose==1.3.7
+notebook==6.4.8
+numpy==1.21.2
+oauthlib==3.2.0
+objsize==0.6.1
+orjson==3.8.5
+outcome==1.1.0
+packaging==21.3
+pandas==1.3.3
+pandas-market-calendars==3.2
+pandas-ta==0.3.14b0
+pandocfilters==1.5.0
+parse==1.19.0
+Pillow==8.3.2
+pluggy==1.0.0
+prometheus-client==0.13.1
+proto-plus==1.22.2
+protobuf==3.20.3
+py==1.11.0
+pyarrow==9.0.0
+pycparser==2.21
+pydot==1.4.2
+pyee==8.2.2
+pyluach==1.3.0
+pymongo==3.13.0
+pyOpenSSL==22.0.0
+pyparsing==2.4.7
+pyppeteer==1.0.2
+pyquery==1.4.3
+pyrsistent==0.18.1
+PySocks==1.7.1
+pytest==6.2.5
+pytest-mock==3.6.1
+pytest-repeat==0.9.1
+pytest-variables==1.9.0
+python-dateutil==2.8.2
+pytz==2021.1
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==2.0.1
+regex==2022.10.31
+requests==2.26.0
+requests-html==0.10.0
+requests-oauthlib==1.3.1
+selenium==4.1.3
+Send2Trash==1.8.0
+sgmllib3k==1.0.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+sympy==1.9
+td-ameritrade-python-api==0.3.5
+terminado==0.13.1
+testpath==0.6.0
+toml==0.10.2
+toolz==0.11.2
+tornado==6.1
+tqdm==4.63.0
+trio==0.20.0
+trio-websocket==0.9.2
+typing_extensions==4.0.1
+urllib3==1.26.6
+w3lib==1.22.0
+wcwidth==0.2.6
+webencodings==0.5.1
+websockets==10.2
+Werkzeug==2.0.3
+widgetsnbextension==3.5.2
+wsproto==1.1.0
+yahoo-fin==0.8.9.1
+yfinance==0.1.63
+zipp==3.7.0
+zstandard==0.19.0
